--- a/UI/angular/angular.json
+++ b/UI/angular/angular.json
@@ -10,6 +10,7 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -34,6 +35,10 @@
             ],
             "scripts": []
           },
+          "serve": {
+    "builder": "@angular-devkit/build-angular:dev-server"
+    
+  },
           "configurations": {
             "production": {
               "budgets": [
